@@ -11,7 +11,6 @@ import static org.dita.dost.TestUtils.assertXMLEqual;
 import static org.dita.dost.util.FilterUtils.Action.EXCLUDE;
 import static org.dita.dost.util.FilterUtils.Action.INCLUDE;
 
-import com.google.common.collect.ImmutableMap;
 import java.io.InputStream;
 import java.util.Map;
 import javax.xml.namespace.QName;
@@ -50,7 +49,7 @@ public class ProfilingFilterTest {
 
   @Test
   public void testFilter() throws Exception {
-    final Map<FilterKey, Action> filterMap = ImmutableMap.of(
+    final Map<FilterKey, Action> filterMap = Map.of(
       new FilterKey(QName.valueOf("platform"), null),
       INCLUDE,
       new FilterKey(QName.valueOf("default"), null),
@@ -74,7 +73,7 @@ public class ProfilingFilterTest {
 
   @Test
   public void testFilter_dita2() throws Exception {
-    final Map<FilterKey, Action> filterMap = ImmutableMap.of(
+    final Map<FilterKey, Action> filterMap = Map.of(
       new FilterKey(QName.valueOf("platform"), null),
       INCLUDE,
       new FilterKey(QName.valueOf("default"), null),
